# String-Analyzer-

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  string_analyser.py
.github/workflows/: ci.yml
docs/: DOCUMENTATION.md  MEDIUM_ARTICLE.md
string_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  patterns.py
tests/: __init__.py  test_analyzer.py
