[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "string-analyzer"
version = "2.0.0"
description = "Extract and analyze printable strings from binary files for malware analysis and forensics"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [
  { name = "String Analyzer contributors" }
]
keywords = ["malware", "forensics", "strings", "binary", "entropy", "reverse-engineering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1.0",
]

[project.scripts]
string-analyzer = "string_analyzer.cli:run"

[project.urls]
Repository = "https://github.com/anpa1200/String-Analyzer-"

[tool.setuptools.packages.find]
where = ["."]
include = ["string_analyzer"]

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
